# quadratic-irrational

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  quadratic-irrational.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
Numeric/: QuadraticIrrational.hs
Numeric/QuadraticIrrational/: CyclicList.hs
src/Numeric/: QuadraticIrrational.hs
src/Numeric/QuadraticIrrational/: CyclicList.hs  Ring.hs  SquareFree.hs
src/Numeric/QuadraticIrrational/Internal/: Lens.hs
tests/: CyclicList.hs  Main.hs  QuadraticIrrational.hs  doctests.hs  tasty.hs
