name: quadratic-irrational
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules: Numeric.QuadraticIrrational
  build-depends: base >= 4.6 && < 4.8
               , arithmoi == 0.4.*
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test-quadratic-irrational
  type: exitcode-stdio-1.0
  main-is: QuadraticIrrational.hs
  hs-source-dirs: tests
  build-depends: base
               , quadratic-irrational
               , numbers == 3000.*
               , QuickCheck >= 2.7 && < 3
               , tasty == 0.8.*
               , tasty-quickcheck == 0.8.*
  default-language: Haskell2010
  ghc-options: -Wall
